--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,29 +1,27 @@
 security:
   password_hashers:
-    App\Entity\User:
-      algorithm: auto
+    App\Entity\User: 'auto'
 
   providers:
-    app_user_provider:
+    users:
       entity:
         class: App\Entity\User
         property: email
 
   firewalls:
-    dev:
-      pattern: ^/(_(profiler|wdt)|css|images|js)/
-      security: false
-
     main:
       lazy: true
-      provider: app_user_provider
+      provider: users
+
       form_login:
         login_path: login
         check_path: login
+        default_target_path: inventories_index
+
       logout:
-        path: logout
-        target: /
+        path: app_logout
+        target: login
 
   access_control:
     - { path: ^/login, roles: PUBLIC_ACCESS }
-    - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/, roles: ROLE_USER }
