--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,8 @@
-# define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
-APP_SECRET='$ecretf0rt3st'
+###> symfony/framework-bundle ###
+APP_ENV=test
+APP_DEBUG=1
+###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://inventory_test:testpass@127.0.0.1:5432/inventory_app_test?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
